updated titles and descriptions for DE

--- a/404.md
+++ b/404.md
@@ -3,4 +3,6 @@ layout: 404
 lang: de
 ref: 404-01
 search-ignore: true
+title: Peakboard Templates – 404
+description: Für Peakboard gibt es zahlreiche Anwendungsmöglichkeiten. Hier findest du die aber nicht, du findest sie auf der Startseite.
 ---
