--- a/cn/404.md
+++ b/cn/404.md
@@ -3,4 +3,6 @@ layout: 404
 lang: cn
 ref: 404-01
 search-ignore: true
+title: "Peakboard模版 — 涵盖各种使用场景的范例"
+description: "Peakboard的灵活性使其可广泛应用于各行各业。我们在此提供了各种配有简短描述的模版，您可直接下载，然后根据需要进行定制。"
 ---
